<resources>
    <string name="app_name">BankApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint_search_bank">Banka Ara...</string>
    <string name="zip_code">Posta Kodu</string>
    <string name="bank_type">Banka Türü</string>
    <string name="go_to_bank">Bankaya git</string>
    <string name="city">Şehir</string>
    <string name="town">İlçe</string>
    <string name="about">Hakkında</string>
    <string name="bank_code">Banka Kodu</string>
    <string name="regional_coordinatory">Bölge Kordinatorlüğü</string>
    <string name="nearest_ATM">En yakın ATM</string>
    <string name="get_directions_to_atm">ATM ye yol tarifi al</string>
    <string name="image">resim</string>
    <string name="an_error_occured">Bir Hata Oluştu</string>
    <string name="okey">Tamam</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut erat laoreet, maximus ex ut, commodo est. Nullam eu malesuada nisl, et viverra lorem. Sed ac luctus dolor.</string>
    <string name="wifi_error_text">İnternete bağlanırken bir hata oluştu. Lütfen internet bağlantınızı kontrol edip tekrar deneyiniz.</string>
    <string name="wifi_error_title">İnternet bağlantınız yok</string>
    <string name="bank_detail">Banka Detayı</string>

</resources>