<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".common.ErrorDialog">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:paddingVertical="5dp"
            android:background="@color/primary_color"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/errorImg"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_error_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_weight="6"
                android:gravity="center"
                android:id="@+id/errorTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/an_error_occured"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="18sp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:textSize="16sp"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:id="@+id/errorContent"
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            android:id="@+id/okBtn"
            app:cardBackgroundColor="@color/secondary_color"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:fontFamily="@font/quicksand_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okey"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                android:textSize="16sp"/>

        </androidx.cardview.widget.CardView>





    </LinearLayout>

</FrameLayout>